# Now

./: .gitignore  CMakeLists.txt  README.md  build.sh
grammar/: NowLexer.cpp  NowLexer.g4  NowLexer.h  NowLexer.interp  NowLexer.tokens  NowParser.cpp  NowParser.g4  NowParser.h  NowParser.interp  NowParserBaseListener.cpp  NowParserBaseListener.h  NowParserBaseVisitor.cpp  NowParserBaseVisitor.h  NowParserListener.cpp  NowParserListener.h  NowParserVisitor.cpp  NowParserVisitor.h
pruebas/: ast.dot  ejemplo  pruebaGraph.cpp
src/: AST.h  ASTBuilderVisitor.cpp  ASTBuilderVisitor.h  LexerErrorListener.h  ParserErrorListener.h  Scope.cpp  Scope.h  SemanticVisitor.cpp  SemanticVisitor.h  Type.cpp  Type.h  main.cpp
tests/: ASTtest.cpp  allStmts.cpp
tests/input/: assignStmt.now  declarationStmt.now  funcStmt.now  ifStmt.now  timeBlockStmt.now
tests/output/: assignStmt.out  declarationStmt.out  funcStmt.out  ifStmt.out  timeBlockStmt.out
